Improve links appearance in the mdx posts

--- a/posts/loscocos.mdx
+++ b/posts/loscocos.mdx
@@ -4,7 +4,7 @@ date: 2024-05-03
 thumbnail: /images/loscocos2.jpg
 ---
 
-We had the chance to stay 6 nights in the [beautiful house](https://www.airbnb.co.in/rooms/1010927194362513615), handled by Micha - Fabio's friend - located in Playa Los Cocos. The location is amazingly direct on the beach. Falling asleep and waking up with the waves sound was great. 
+We had the chance to stay 6 nights in the <LinkComponent href="https://www.airbnb.co.in/rooms/1010927194362513615" text="beautiful house" /> handled by Micha - Fabio's friend - located in Playa Los Cocos. The location is amazingly direct on the beach. Falling asleep and waking up with the waves sound was great. 
 
 <ImageComponent src="/images/loscocos1.jpg" alt="LosCocos1" />
 <ImageComponent src="/images/loscocos2.jpg" alt="LosCocos2" />
