Add space component

--- a/posts/guajira.mdx
+++ b/posts/guajira.mdx
@@ -7,6 +7,8 @@ thumbnail: /images/guajira2.jpg
 
 From Palomino, we reached Riohacha via bus. Let me say something about colombian buses: I think italian transport managers should come here to learn something. There’s no proper bus timetable (or we don’t know where to find it) but you just stop buses on the main road, say where you have to go, pay and they take you to your destination. Sometimes it is even faster than expected. We never had to wait more than 5 minutes before the right bus comes. If you have to change the bus, there’s always someone taking care of you, helping with the luggage and telling you where to go. Amazing. One month ago we were in Milan and we could not understand how to buy train tickets to Lugano…
 
+<BigSpace />
+
 In Riohacha we arranged a 2 days / 1 night trip to Punta Gallinas, the northest point of South America. This area is a indigenous reserve, and therefore it is mandatory to be accompanied by someone local. The main tribe living here is called _Wayuu_: our guide was Guay, and he is from this tribe. He's 42 years old and married since he is 13, and has 2 daughters and 3 nephews. Quite a difference compared to our contemporary culture 😅 
 
 <ImageComponent src="/images/guajira1.jpg" alt="Guajira1" />
