Add country filter

--- a/posts/bogota.mdx
+++ b/posts/bogota.mdx
@@ -2,6 +2,7 @@
 title: Bogota
 date: 2024-05-01
 thumbnail: /images/bogota4.jpg
+country: colombia
 ---
 
 We spent only one full day in Bogotá: the 1st of May. We woke up early (jet lag 😇) and went to the Monserrate viewpoint with the cable car, where you can see how incredibly huge is the city from there... It is also possible to hike up there, but we didn't feel like working out. At the top, there is a church and some food/souvenir shops where they called me out "Swedish" - guess I have to work hard on my Italian tan. On the way down, we found out that you can buy aphrodisiac "big ass ants" ("hormigas culonas"): this time we skipped it, but maybe next time we give it a try 😅.
