--- a/posts/cartagena.mdx
+++ b/posts/cartagena.mdx
@@ -2,6 +2,7 @@
 title: Cartagena
 date: 2024-05-20
 thumbnail: /images/cartagena1.jpg
+country: colombia
 ---
 
 We stayed in Cartagena only a couple of nights, but it's true that it is a must-see when you visit colombian caribbean coast. The historical center of the city looks like a spanish old town. It's a pretty colonial city, full of colorful walls and small streets. Unfortunately it is VERY touristic, with a lot of fancy clothes shop and travel agencies. We walked through the cute streets of the city and on the ancient protective walls that surround the city.  
