--- a/posts/guachaca.mdx
+++ b/posts/guachaca.mdx
@@ -2,6 +2,7 @@
 title: Guachaca
 date: 2024-05-18
 thumbnail: /images/guachaca3.jpg
+country: colombia
 ---
 
 After the tour in the desert, we met again Micha and Nathalia - Fabio’s friend and his girlfriend - for a couple of days, during which we stayed at <LinkComponent href="https://www.yay-colombia.com/" text="Yay" />, a sustenaible beautiful resort in the middle of the jungle, close to the small village of Guachaca. When I arrived, it felt like I was coming to paradise. We slept in a lovely bamboo hut close to the river, with an open air shower ❤️ The resort has even a natural pool, that it is directly filled with water by a natural spring. All the food and drinks served in the restaurant - mostly vegan/vegetarian - come from local suppliers or their garden directly. You will not find anything in the room or in the restaurant that is packed with plastic. We loved everything about this place and I admit - it was difficult to leave on the third day 🥲
