--- a/posts/medellin.mdx
+++ b/posts/medellin.mdx
@@ -2,6 +2,7 @@
 title: Medellin
 date: 2024-05-22
 thumbnail: /images/medellin3.jpg
+country: colombia
 ---
 
 We stayed 4 days in Medellin, and we found it beautiful. It is a very green city, full of parks and huge palms even in the very center of the city. We walked around the city center, and saw some Botero statues in Parque Botero. 
