--- a/posts/mexicocity.mdx
+++ b/posts/mexicocity.mdx
@@ -2,6 +2,7 @@
 title: Mexico City
 date: 2024-05-26
 thumbnail: /images/mexicocity1.jpg
+country: mexico
 ---
 
 We loved Mexico City. Since the first day we realised we didn't plan enough time here: I'm sure we will come back! On the first day we strolled around in the streets of Centro Historico, the historic centre of the city, eating tacos and drinking Corona.
