--- a/posts/minca.mdx
+++ b/posts/minca.mdx
@@ -2,6 +2,7 @@
 title: Minca
 date: 2024-05-08
 thumbnail: /images/minca1.jpg
+country: colombia
 ---
 
 We stayed 4 nights in the misty area around Minca. The first 2 nights in a house located at an altitude of 1600mt, in an area named Vista Nieve. The view from the cozy house was incredible, and we just spent one full lazy day inside the house, cooking and chillin, together with Micha and Natalia, with the rain pouring outside.
