--- a/posts/palomino.mdx
+++ b/posts/palomino.mdx
@@ -2,6 +2,7 @@
 title: Palomino
 date: 2024-05-12
 thumbnail: /images/palomino1.jpg
+country: colombia
 ---
 
 We arrived in palomino last Sunday at lunchtime, after a heavy rain storm happened on Saturday. The water and electricity in our house was not working (often happens after storms, it is quite common in this area), and walking around in Palomino a lot of streets were flooded with mud, so it was not love at first sight 😁
