--- a/posts/loscocos.mdx
+++ b/posts/loscocos.mdx
@@ -2,6 +2,7 @@
 title: Playa Los Cocos
 date: 2024-05-03
 thumbnail: /images/loscocos2.jpg
+country: colombia
 ---
 
 We had the chance to stay 6 nights in the <LinkComponent href="https://www.airbnb.co.in/rooms/1010927194362513615" text="beautiful house" /> handled by Micha - Fabio's friend - located in Playa Los Cocos. The location is amazingly direct on the beach. Falling asleep and waking up with the waves sound was great. 
