--- a/posts/santamonica.mdx
+++ b/posts/santamonica.mdx
@@ -15,7 +15,7 @@ We went a couple of times to Venice Beach: I’m pretty sure I could spend sever
 <ImageComponent src="/images/santamonica2.jpg" alt="Santa Monica" />
 <ImageComponent src="/images/santamonica3.jpg" alt="Santa Monica" />
 
-We visited also the classic spots: Holliwood boulevard (if you think that having a star on the ground of that road is something exclusive, forget it: this street is so long, that there are even empty stars without a name on it). And downtown LA, where we had a great Thai lunch at the Grand Central market.
+We visited also the classic spots: Hollywood boulevard (if you think that having a star on the ground of that road is something exclusive, forget it: this street is so long, that there are even empty stars without a name on it). And downtown LA, where we had a great Thai lunch at the Grand Central Market.
 
 <ImageComponent src="/images/santamonica4.jpg" alt="Santa Monica" />
 <ImageComponent src="/images/santamonica5.jpg" alt="Santa Monica" />
