--- a/posts/deathvalley.mdx
+++ b/posts/deathvalley.mdx
@@ -17,7 +17,7 @@ We then drove through the famous Artists Drive, a scenic one-way 15 km route, th
 <ImageComponent src="/images/deathvalley5.jpg" alt="Death Valley" />
 <ImageComponent src="/images/deathvalley6.jpg" alt="Death Valley" />
 
-Afterwards, we went to spot the Mesquite sand dunes, and the Father Crowley overlook, a viewpoint over the Rainbow Canyon, named after the several colors that the volcaninc rock took on because of ancient volcanic activity. This canyon is also named Start Wars canyon: it was used to train military jet pilots, and apparently it is a very challenging flight. A pilot died in 2019, and after that it is not used anymore for military exercises.
+Afterwards, we went to spot the Mesquite sand dunes, and the Father Crowley overlook, a viewpoint over the Rainbow Canyon, named after the several colors that the volcaninc rock took on because of ancient volcanic activity. This canyon is also named Star Wars canyon: it was used to train military jet pilots, and apparently it is a very challenging flight. A pilot died in 2019, and after that it is not used anymore for military exercises.
 
 <ImageComponent src="/images/deathvalley11.jpg" alt="Death Valley" />
 <ImageComponent src="/images/deathvalley7.jpg" alt="Death Valley" />
