Add one more picture

--- a/posts/santacruz.mdx
+++ b/posts/santacruz.mdx
@@ -6,6 +6,7 @@ country: usa
 ---
 On our way south along the Highway 1, we stopped in Santa Cruz. The beach boardwalk is an old-school paradise for kids, with rollercoasters, indoor videogames hall and sweet food stalls selling deep fried oreos. The main beach is very nice, with a lot of space and free from any reserved space or whatsoever. Walking along the pier, you can spot the sea lions lying in the sun. We visited also the Lighthouse viewpoint, and Sunset State Beach: a huge wild beach, far from bars and restaurants, reachable with the car.
 
+<ImageComponent src="/images/santacruz6.jpg" alt="Santa Cruz" />
 <ImageComponent src="/images/santacruz1.jpg" alt="Santa Cruz" />
 <ImageComponent src="/images/santacruz2.jpg" alt="Santa Cruz" />
 <ImageComponent src="/images/santacruz5.jpg" alt="Santa Cruz" />
