Fix thumbnail pic

--- a/posts/kauainorth.mdx
+++ b/posts/kauainorth.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kauai - North Shore
 date: 2024-07-10
-thumbnail: /images/honolulu2.jpg
+thumbnail: /images/kauainorth14.jpg
 country: usa
 ---
 We decided to spend 10 days in Kauai: the island is not so big and pretty much everything is reachable with the car in 1-2 hours. The first 5 days we slept in Princeville, to visit the north and east shore. We did a lot of beach life, but without any doubt our favorite one was Secret Beach. It is reachable via a 5-10 minute hike from the parking, and both times we visited it, we were almost alone in this beautiful white sanded beach. From the stone wall at the back of the beach, some water flows down, creating some small waterfalls, making it possible to take sort of a natural shower.
