--- a/posts/kauainorth.mdx
+++ b/posts/kauainorth.mdx
@@ -22,7 +22,7 @@ We had fun riding bikes on the East coast, where you can find a bicycle lane tha
 <ImageComponent src="/images/kauainorth6.jpg" alt="Kauai North" />
 <ImageComponent src="/images/kauainorth7.jpg" alt="Kauai North" />
 
-We also visited Hanalay Bay beach, and Hideaways beach, that was reachable by walking from our apartment. We wished to hike along the famous Kalalau trail, as it is known as one of the most beautiful trails in the whole Hawaii islands area, but unfortuntely it required a reservation in advance for the parking spot, and we are not planning what to do so much in advance. If there will be another time to visit Hawaii, we will consider to plan accomodations and activities in advance, as the most beautiful spots require some thinking in advance.
+We also visited Hanalay Bay beach, and Hideaways beach, that was reachable by walking from our apartment. We wished to hike along the famous Kalalau trail, as it is known as one of the most beautiful trails in the whole Hawaii islands area, but unfortuntely it required a reservation in advance for the parking spot, and we are not planning what to do so much in advance. If there will be another time to visit Hawaii, we will consider to plan more accomodations and activities, as the most beautiful spots require some thinking beforehand.
 
 <ImageComponent src="/images/kauainorth10.jpg" alt="Kauai North" />
 <ImageComponent src="/images/kauainorth11.jpg" alt="Kauai North" />
