--- a/posts/tokyo.mdx
+++ b/posts/tokyo.mdx
@@ -14,7 +14,7 @@ Tokyo was... shocking 😅 First, we flew with All Nippon Airways and the plane 
 <ImageComponent src="/images/tokyo5.jpg" alt="Tokyo" />
 <ImageComponent src="/images/tokyo6.jpg" alt="Tokyo" />
 
-The best in Tokyo was the food. We were surprised how much good and cheap food you can find, especially in the area from our hotel (Shibuya). We had many ramen: the classic is the one that you pay from a vending machine right at the entrance of the restaurant. After paying, you can sit inside and wait for your order. One afternoon we joined a food tour from Secret Food Tours: Natsumi took us around the district of Ueno, where we could learn a lot, from the correct way of eating the sushi, to many aspects of the japanese culture. Another highlight from our food experience was definitely the Wagyu and Kobe beef, that we liked a lot.
+The best in Tokyo was the food. We were surprised how much good and cheap food you can find, especially in the area from our hotel (Shibuya). We had many ramen: the classic is the one that you pay from a vending machine right at the entrance of the restaurant. After paying, you can sit inside and wait for your order. One afternoon we joined a food tour from <LinkComponent href="https://www.secretfoodtours.com/tokyo/food-tours-tokyo/" text="Secret Food Tours" />: Natsumi took us around the district of Ueno, where we could learn a lot, from the correct way of eating the sushi, to many aspects of the japanese culture. Another highlight from our food experience was definitely the Wagyu and Kobe beef, that we liked a lot.
 
 <ImageComponent src="/images/tokyo7.jpg" alt="Tokyo" />
 <ImageComponent src="/images/tokyo9.jpg" alt="Tokyo" />
