--- a/posts/ubud.mdx
+++ b/posts/ubud.mdx
@@ -15,7 +15,7 @@ On our first full day there, the weather was pretty cloudy, so we decided to wal
 <ImageComponent src="/images/ubud3.jpg" alt="Ubud" />
 <ImageComponent src="/images/ubud4.jpg" alt="Ubud" />
 
-In our second day, we squeezed in a lot of activities, such as visiting the Ubud Palace, walking in the local market, an easy hike between Tegalalang rice terraces, entering the water temple Pura Tirta Empul and a degustation of local coffees and teas. The most impressive was definitely the Tegalalang rice terraces: quite touristic, for example there were a lot of swings where girls can take a picture with a long red dressed provided there, and drink stalls every 10 meters... So the place lost a bit its authenticity, but it is still stunningly beautiful. What was really disappointing was seeing so many foreigners practising the purification ritual in the Pura Tirta Empul temple. The temple pond has a spring giving out fresh water regularly, which Balinese Hindus consider to be holy. The ritual consist in entering the pond and wet your head with water coming out of the fountains. There was a huge queue of people waiting for getting in the water, all foreigners, ready to take a picture of themselves with their phone. It is very sad that the local people let tourist spoil such a holy place: in my opinion, the temple can be visited but the ritual should be limited to Balinese Hindus.
+In our second day, we squeezed in a lot of activities, such as visiting the Ubud Palace, walking in the local market, an easy hike between Tegalalang rice terraces, entering the water temple Pura Tirta Empul and a degustation of local coffees and teas. The most impressive was definitely the Tegalalang rice terraces: quite touristic, for example there were a lot of swings where girls can take a picture with a long red dress provided there, and drink stalls every 10 meters... So the place lost a bit its authenticity, but it is still stunningly beautiful. What was really disappointing was seeing so many foreigners practising the purification ritual in the Pura Tirta Empul temple. The temple pond has a spring giving out fresh water regularly, which Balinese Hindus consider to be holy. The ritual consist in entering the pond and wet your head with water coming out of the fountains. There was a huge queue of people waiting for getting in the water, all foreigners, ready to take a picture of themselves with their phone. It is very sad that the local people let tourist spoil such a holy place: in my opinion, the temple can be visited but the ritual should be limited to Balinese Hindus.
 
 <ImageComponent src="/images/ubud5.jpg" alt="Ubud" />
 <ImageComponent src="/images/ubud6.jpg" alt="Ubud" />
