--- a/posts/ninhbinh.mdx
+++ b/posts/ninhbinh.mdx
@@ -42,7 +42,7 @@ On our last day we had a delicious dinner in Tam Coc, with roasted duck and pork
 <ImageComponent src="/images/ninhbinh9.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh8.jpg" alt="Ninh Binh" />
 
-After Ninh Binh, our next stop is in the central part of Vietnam: Da Nang. We decided to take the train to get there, and it was a fun 14 hours drive with local people 😄 While we were waiting for the train at the Ninh Binh station, we saw a father taking around his two kids of about 8-10 years old, to go to speak to tourists in order to improve their English. I even spoke to one kid for 10-15 minutes, and I found it so sweet! It doesn't cost anything to anyone, and it is very important for Vietnamese people to learn English, to have better job opportunities. Many Vietnamese - who can afford it - send kids to extra English lessons for this reason.
+After Ninh Binh, our next stop is in the central part of Vietnam: Da Nang. We decided to take the train to get there, and it was a fun 14 hours drive with local people 😄 While we were waiting for the train at the Ninh Binh station, we saw a father taking around his two kids of about 8-10 years old, to go to speak to tourists in order to improve their English. I even spoke to one kid for 10-15 minutes, and I found it so sweet! It doesn't cost anything to anyone, and it is very important for Vietnamese people to learn English, to have better job opportunities. Many people here - the ones who can afford it - send kids to extra English lessons for this reason.
 
 <ImageComponent src="/images/ninhbinh19.jpg" alt="Ninh Binh" />
 
