Fix photos and text

--- a/posts/ninhbinh.mdx
+++ b/posts/ninhbinh.mdx
@@ -13,6 +13,8 @@ We chose an Airbnb that was in a quiet place, with a nice view from our own bung
 
 <ImageComponent src="/images/ninhbinh1.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh2.jpg" alt="Ninh Binh" />
+<ImageComponent src="/images/ninhbinh10.jpg" alt="Ninh Binh" />
+<ImageComponent src="/images/ninhbinh11.jpg" alt="Ninh Binh" />
 
 I had recommendations from Mihn Kahn, one of my ex colleagues, who was so nice during our whole stay in Vietnam to give us a lot of good tips. We did a boat tour in Trang An on the river, where we could admire the big limestone rocks from the water. We learnt that here in this area a King Kong movie was filmed 😄 The route that we chose included also visiting some caves that we could explore from the boat... It was very nice! And luckily not with many tourists.
 
@@ -20,10 +22,8 @@ I had recommendations from Mihn Kahn, one of my ex colleagues, who was so nice d
 <ImageComponent src="/images/ninhbinh4.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh5.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh6.jpg" alt="Ninh Binh" />
-<ImageComponent src="/images/ninhbinh10.jpg" alt="Ninh Binh" />
-<ImageComponent src="/images/ninhbinh11.jpg" alt="Ninh Binh" />
 
-We visited the Bai Dinh Pagoda - it was not even mentioned in our travel book guide, but it is a huge temple area built recently, whose surface covers kilometers and you can walk forever. It was very impressive, and it was not flooded with tourists.
+We visited the Bai Dinh Pagoda - it was not even mentioned in our travel book guide, but it is a huge temple area built recently, whose surface covers kilometers and you can walk forever. It was very impressive, and it was not flooded with tourists, sometimes we felt we were the only visitors.
 
 <ImageComponent src="/images/ninhbinh12.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh13.jpg" alt="Ninh Binh" />
