--- a/posts/ninhbinh.mdx
+++ b/posts/ninhbinh.mdx
@@ -36,7 +36,7 @@ On one afternoon we could walk up for 45 minutes at the Mua Cave Viewpoint, to h
 <ImageComponent src="/images/ninhbinh17.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh18.jpg" alt="Ninh Binh" />
 
-On our last day we had a delicious dinner in Tam Coc, with roasted duck and pork in caramel sauce... Amazing food in this restaurant called <LinkComponent href="https://g.co/kgs/ZCgMsZi" text='"Family restaurant"' />. Another night we were invited to have dinner with the family and friends from our accomodation's owner. It was very funny and we had the chance to try goat blood: I had a very very small bite, and Fabio had definitely more 😄 It looks like a red gelatine, and tastes a lot like... well, goat 😄. Not our favourite dish, but never try never know 😄. And Fabio (curiously only him) was invited many times to make a toast to the Vietnamese women's day (20th October): funny how no women were invited to drink alcohol, as they were all working in the kitchen 😅. He had many shots of palm wine, but the next day he was incredibly fresh again 👍
+On our last day we had a delicious dinner in Tam Coc, with roasted duck and pork in caramel sauce... Amazing food in this restaurant called <LinkComponent href="https://g.co/kgs/ZCgMsZi" text='"Family restaurant"' />. Another night we were invited to have dinner with the family and friends from our accomodation's owner. It was very funny and we had the chance to try goat blood: I had a very very small bite, and Fabio had definitely more 😄 It looks like a red gelatine, and tastes a lot like... well, goat 😄. Not our favourite dish, but never try never know 😄. And Fabio was invited many times to make a toast to the Vietnamese women's day (20th October): funny how no women were invited to drink alcohol, as they were all working in the kitchen 😅. He had many shots of palm wine, but the next day he was incredibly fresh again 👍
 
 <ImageComponent src="/images/ninhbinh7.jpg" alt="Ninh Binh" />
 <ImageComponent src="/images/ninhbinh9.jpg" alt="Ninh Binh" />
