Add possibility to have a numeric "part" for countries

--- a/posts/kochang.mdx
+++ b/posts/kochang.mdx
@@ -3,6 +3,7 @@ title: Ko Chang
 date: 2024-11-27
 thumbnail: /images/kochang4.jpg
 country: thailand
+part: 1
 ---
 
 Ko Chang (the one on the west part of Thailand) is the 3rd biggest thai island. To get there we flew to Trat from Bangkok with a very short flight, and then we hopped on a speedboat for a 30 minutes ride. We booked a whole house on the east side of the island, the quiet one. Indeed it was quiet, except for the noisy birds squeaking even during the night 😅
