--- a/posts/komak.mdx
+++ b/posts/komak.mdx
@@ -3,6 +3,7 @@ title: Ko Mak
 date: 2024-12-02
 thumbnail: /images/komak4.jpg
 country: thailand
+part: 1
 ---
 
 A travel agency organized the transport to Ko Mak for us. After a couple of taxi rides in Ko Chang, we could finally board a speedboat to the smaller island, and at the pier the staff from our hotel was waiting to pick us up. We booked 2 apartments in a resort in the middle of a thick jungle. We had an apartment right under the roof, and in the early morning the birds on top of our heads were giving a party 😅 On our first day we rented a scooter, and the roads were definitely smaller and flatter than in Ko Chang. Overall, I would say much easier to drive. Ko Mak is way smaller, and the longest ride that we drove ourselves was maybe 20 minutes.
