--- a/posts/kophangan.mdx
+++ b/posts/kophangan.mdx
@@ -3,6 +3,7 @@ title: Ko Phangan
 date: 2024-12-18
 thumbnail: /images/kophangan12.jpg
 country: thailand
+part: 1
 ---
 
 We travelled from Ko Phayam, on the west coast of Thailand, to Ko Phangan, which is on the east coast, by boat, minivan and then boat (catamaran) again. It was a long journey, that took almost the whole day, and especially the catamaran was a bumpy ride on the sea: it was almost not possible to walk during the journey and a lot of people had to throw up 🫢 Luckily, we didn’t feel sick and finally arrived to our destination in the late afternoon.
