--- a/posts/kophayam.mdx
+++ b/posts/kophayam.mdx
@@ -3,6 +3,7 @@ title: Ko Phayam
 date: 2024-12-07
 thumbnail: /images/kophayam10.jpg
 country: thailand
+part: 1
 ---
 
 After Ko Chang and Ko Mak, we went back to Bangkok with my friend Claudia for a couple of nights. Still craving for beach life, we decided to travel to the Andaman coast for a couple of weeks before meeting Fabio’s parents and friends in Ko Phangan. First we had to flight to Ranong, and from there we took a ferry to the island. Fabio was already here, for me it was the first time, but we both loved it. It is a hippie island, with a very chill vibe, still without any Seven 11 shops or very big resorts. 
