Add picture in latest post

--- a/posts/kochangranong.mdx
+++ b/posts/kochangranong.mdx
@@ -12,6 +12,7 @@ After Hua Hin, we went to Ko Phayam - where we were already <LinkComponent text=
 
 After one week, we decided that we would like to see also islands that are a bit more remote, and still untouched by big chunks of tourists. So we went to the close-by Ko Chang (not to be confused with the other Ko Chang, in the province of Trat, that we visited <LinkComponent text="in December" href="/posts/kochang" />), that is only a 15 minutes boat ride from Ko Phayam, in the direction of the main land. Ko Chang is more or less the same size than Ko Phayam, it is closer to the main local port on the mainland (Ranong) but barely has roads. When we arrived at the pier, there were a few moto-taxi ready to take us to our bungalow, and it was a 15 minutes ride on small roads in the middle of the jungle. Actually most of what we saw were gum tree plantations, but still a lot of nature. Our bungalow was a simple wooden hut very close to the beach. We loved the hospitality at <LinkComponent href="https://www.booking.com/Share-NBCL5re" text="Sunset Bungalows" />, and they even had moka coffee 😍.
 
+<ImageComponent src="/images/kochangranong26.jpg" alt="Ko Chang" />
 <ImageComponent src="/images/kochangranong1.jpg" alt="Ko Chang" />
 
 On the first day we arrived quite early to enjoy the afternoon, and we made a long walk on the beach. This resort was located on one of the longest beaches on the island, and we ended up in a bar on the beach drinking a coconut.
